--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,9 @@ Thumbs.db
 .env
 .venv
 
+# Log files
+*.log
+app.log
+
 # Session data (optional - uncomment if you don't want to track session files)
 # sessions/
