Make predefined courses optional - move to gitignored file for privacy

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ app.log
 
 # Session data (optional - uncomment if you don't want to track session files)
 # sessions/
+
+# Local predefined courses (keep your personal courses private)
+predefined_courses.py
